--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "astro": "^2.8.0",
+    "parallax-js": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/parallax-js": "^3.1.0"
   }
 }
